# simple-converter

./: .gitignore  LICENSE  README.md  index.html
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts  utils.ts
src/backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/backend/scripts/: create_tables.py  create_user.py  drop_all.py
src/backend/src/: create_user.py  db_models.py  main.py  requests.py  responses.py
src/components/common/: ContentContainer.tsx  FileDropArea.tsx  IconButton.tsx  Navbar.tsx  UploadButton.tsx  utils.ts
src/components/common/statusbar/: Message.tsx  StatusBar.tsx
src/components/home/: FileSelectionArea.tsx  Home.tsx
src/components/home/fileconverter/: SelectedFiles.tsx
src/context/: StatusProvider.tsx
src/frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/assets/: manifest.json
src/frontend/src/: App.tsx  constants.ts  main.tsx  mixins.ts  styles.css  types.ts  utils.ts
src/frontend/src/components/common/: CircularLoader.tsx  FileDropArea.tsx  HydrateFallback.tsx  IconButton.tsx  OuterContainer.tsx  SearchBar.tsx  Select.tsx  UploadButton.tsx
src/frontend/src/context/: FileConverterStateProvider.tsx  StatusProvider.tsx
src/frontend/src/css/: reset.css  vars.css
src/frontend/src/hooks/: ClickOutside.ts  EscapeKey.ts  FileConverterState.ts  Status.ts
src/frontend/src/services/: exceptions.ts  fileconvert.service.ts  filedownload.service.ts  fileupload.service.ts  types.ts
src/hooks/: Status.ts
src/services/: fileupload.service.ts
(+31 files in other folders)
